--- a/css/top.css
+++ b/css/top.css
@@ -25,9 +25,32 @@
 }
 
 .mySlides img {
+    position: absolute;
     width: 100%;
     height: 50vh;
     object-fit: cover;
+    object-position: 30% 30%;
+}
+
+.mySlides .text-box {
+    position: absolute;
+    width: auto;
+    height: auto;
+    padding: 0;
+    top: 80%;
+    right: 1rem;
+    text-align: center; 
+    transform: translateY(-50%)
+}
+
+.mySlides .text-box .title1 {
+    font-size: 1rem;
+    margin: 0 0 .3rem 0;
+}
+
+.mySlides .text-box .title2 {
+    font-size: 1rem;
+    margin: 0 0 .3rem 0;
 }
 
 /* Next & previous buttons */
@@ -58,14 +81,36 @@
 }
 
 /* Caption text */
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
+.text1 {
+    color: #333;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;    
+}
+
+.text2 {
+    color: #333;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;    
+}
+
+.info__btn {
+    width: 98px;
+    font-size: .8rem;
+    background-color: #fff;
+    border: 1px solid gray;
+    padding: .5rem 1rem;
+    text-decoration: none;
+}
+
+.info__btn:hover {
+    background-color: lightgray;
+    transition: all .4s;
+}
+
+.info__btn:link,
+.info__btn:active,
+.info__btn:visited {
+    color: #333;
 }
 
 /* Number text (1/3 etc) */
