--- a/css/fragrance.css
+++ b/css/fragrance.css
@@ -8,6 +8,8 @@ body {
     margin: auto;
 }   
 
+
+/* 商品カテゴリタイトル */
 .product--list__title h2 {
     text-align: center;
     margin: 3rem 0;
@@ -19,6 +21,8 @@ body {
     margin-bottom: 4rem;
 }
 
+
+/* 商品カード */
 .card {
     perspective: 150rem;
     -moz-perspective: 150rem;
@@ -144,7 +148,6 @@ body {
 .card__heading-span--3 {
     background-image: linear-gradient(to right bottom, #4faaff, #4259db); 
 }
-
 .card__heading-span--4 {
     background-image: linear-gradient(to right bottom, #232526, #414345); 
 }
