--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,8 @@ body {
     color: #333;
 }
 
+
+/* モデルン紹介 */
 .about--moderne {
     width: 80%;
     margin: auto;
@@ -47,6 +49,7 @@ body {
 }
 
 
+/* モデルン特長 */
 .moderne--features {
     width: 80%;
     margin: auto;
@@ -138,6 +141,7 @@ body {
 }
 
 
+/* モデルンハッシュタグ（見栄え） */
 .text--outlined {
     width: 75%;
     margin: auto;
